hyxf_devops/k8s/ingress/k8s_ingress/ingress_example.yml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: k8s-dashboard
    namespace: kube-system
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/secure-backends: "true"
  spec:
    tls:
    - secretName: tls-secret
    rules:
    - host: dashboard.51xf.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: kubernetes-dashboard-http
            servicePort: 9090

    - host: prometheus.51xf.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: prometheus
            servicePort: 9090

    - host: grafana-dev.51xf.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000

    - host: efk.51xf.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: kibana-logging
            servicePort: 5601


- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: rps-ingress
    namespace: ops-tools
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/secure-backends: "true"
  spec:
    tls:
    - hosts:
      - rps.51xf.cn
    rules:
    - host: rps.51xf.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: rps
            servicePort: 8080



- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: superdiamond-ingress-http
    namespace: kube-public
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/secure-backends: "true"
  spec:
    tls:
    - hosts:
      - sp.51xf.cn
    rules:
    - host: sp.51xf.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: superdiamond-svc
            servicePort: 8080

- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: superdiamond-ingress-https
    namespace: kube-public
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/secure-backends: "true"
  spec:
    tls:
    - hosts:
      - sp.51xf.cn
    rules:
    - host: sp.51xf.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: superdiamond-svc
            servicePort: 8080
